--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -37,9 +37,15 @@ loguru==0.7.3
 # Token counting and budget tracking
 tiktoken==0.8.0
 
-# WebSocket support (for future Phase 3)
+# WebSocket support
 python-socketio==5.12.0
 aiohttp==3.11.11
+python-engineio==4.10.1
+
+# Queue and task management
+aioredis==2.0.1
+redis==5.2.1
+apscheduler==3.10.4
 
 # Testing
 pytest==8.3.4
